# othelo

./: README.md  概要.txt
ソースコード/: Cargo.toml
ソースコード/othello/: main.rs  mygame.rs
ソースコード/othello/mygame/: board.rs  button.rs  detailedstatus.rs  mouse.rs  particles.rs  predict.rs  se.rs  stone.rs  user.rs
ソースコード/othello/mygame/predict/: montecarlo.rs
