[package]
name = "games"
version = "0.1.0"
authors = ["hamap <mml905@zoho.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = "0.6.0-rc1" 
glam = "0.12.0"
mint = "0.5.6"
rand = "0.6"
tokio = { version = "0.2", features = ["full"] }
[[bin]]
name ="othello"
path="othello/main.rs"

[profile.dev]
opt-level = 3